Update versions and deal with constructor errors